# Aegisub

./: .appveyor.yml  .gitmodules  Aegisub.sln  Makefile.inc.in  README.md  appveyor.yml  configure.ac  header.mk  meson.build  meson_options.txt
.ci/: upload_win_installer.sh
.ci/debian/: Dockerfile  entrypoint.sh
.ci/distribution/debian/: README.Debian  changelog  control  copyright  rules
.ci/docker/: debian_entrypoint.sh
.ci/docker/bionic/: Dockerfile
.ci/docker/buster/: Dockerfile
.ci/docker/disco/: Dockerfile
.ci/docker/eoan/: Dockerfile
automation/: Makefile  meson.build
automation/autoload/: clean-k-tags.lua  drm.max.ReplaceStuffMax.moon  duetto-meika.lua  fixkarakeyframe.lua  karaoke-adjust-1sec.lua  karaoke-split.lua  max.Curcol.lua  max.DiaKomen.lua  max.EditorTampan.lua  max.Halipsis.lua  max.NoKomen.lua  mediainfo.lua  romanizer.lua  unkf.lua
automation/include/: ffi-mediaInfo.lua
libaegisub/common/: character_count.cpp  line_iterator.cpp
m4macros/: ax_boost_chrono.m4  ax_boost_locale.m4  ax_boost_thread.m4
po/: aegisub.pot  fr_FR.po
src/: Makefile  ass_karaoke.cpp  ass_karaoke.h  ass_style.cpp  ass_style.h  audio_timing.h  audio_timing_karaoke.cpp  auto4_lua.cpp  charset_detect.cpp  dialog_about.cpp  dialog_version_check.cpp  version.cpp  version.h  video_display.cpp
src/bitmaps/: manifest.respack
src/command/: help.cpp  time.cpp
src/include/: agi_pre_c.h
src/libresrc/: default_config.json  default_hotkey.json  default_menu.json
src/libresrc/osx/: default_hotkey.json  default_menu.json
subprojects/: freetype2.wrap  harfbuzz.wrap  libass.wrap
tools/: Makefile  version.sh
