automation_dir = dataroot / 'automation'

install_data(
    'autoload/cleantags-autoload.lua',
    'autoload/duetto-meika.lua',
    'autoload/karaoke-adjust-1sec.lua',
    'autoload/karaoke-split.lua',
    'autoload/kara-templater.lua',
    'autoload/select-overlaps.moon',
    'autoload/ua.BlurAndGlow.lua',
    'autoload/ua.ChangeCase.lua',
    'autoload/ua.Colorize.lua',
    'autoload/ua.Cycles.lua',
    'autoload/ua.FadeWorks.lua',
    'autoload/ua.HYDRA.lua',
    'autoload/ua.ScriptCleanup.lua',
    'autoload/unkf.lua',
    install_dir: automation_dir / 'autoload')

install_data(
    'demos/future-windy-blur.lua',
    'demos/raytracer.lua',
    'demos/raytracer-test1.ass',
    install_dir: automation_dir / 'demos')

install_data(
    'include/cleantags.lua',
    'include/clipboard.lua',
    'include/karaskel-auto4.lua',
    'include/karaskel.lua',
    'include/lfs.lua',
    'include/moonscript.lua',
    'include/re.lua',
    'include/unicode.lua',
    'include/utils-auto4.lua',
    'include/utils.lua',
    install_dir: automation_dir / 'include')

install_data(
    'include/aegisub/argcheck.moon',
    'include/aegisub/clipboard.lua',
    'include/aegisub/ffi.moon',
    'include/aegisub/lfs.moon',
    'include/aegisub/re.moon',
    'include/aegisub/unicode.moon',
    'include/aegisub/util.moon',
    install_dir: automation_dir / 'include' / 'aegisub')
